force-app/main/default/objects/Case_Round_Robin_Queue__c/Case_Round_Robin_Queue__c.object-meta.xml
<CustomObject>
    <label>Case Round Robin Queue</label>
    <nameField>
        
        <label>Case Round Robin Queue Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Case Round Robin Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>