force-app/main/default/objects/Case_Round_Robin_Queue__c/fields/Assignment_Updates_Need_Review__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Updates_Need_Review__c</fullName>
    <formula>If( Total_Actual_Queue_Members__c = Total_Queue_Members__c ,FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Updates Need Review</label>
    <type>Checkbox</type>
</CustomField>