force-app/main/default/objects/Case_Round_Robin_Queue__c/fields/Member_Assignments_Last_Executed__c.field-meta.xml
<CustomField>
    <fullName>Member_Assignments_Last_Executed__c</fullName>
    <label>Member Assignments Last Executed</label>
    <type>DateTime</type>
</CustomField>