force-app/main/default/objects/Case_Round_Robin_Queue__c/fields/Next_Position__c.field-meta.xml
<CustomField>
    <fullName>Next_Position__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Next Position</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>