force-app/main/default/objects/Case_Round_Robin_Queue__c/fields/Standard_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Standard_Queue_Id__c</fullName>
    <label>Standard Queue Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>