force-app/main/default/objects/Case_Round_Robin_Queue__c/fields/Total_Actual_Queue_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Queue_Members__c</fullName>
    <label>Total Actual Queue Members</label>
    <summaryForeignKey>Case_Round_Robin_Queue_Member__c.Case_Round_Robin_Queue__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>