force-app/main/default/objects/Case_Round_Robin_Queue__c/fields/Total_Queue_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Queue_Members__c</fullName>
    <label>Total Queue Members</label>
    <summarizedField>Case_RR_Queue_Member_Assignment__c.Weight__c</summarizedField>
    <summaryFilterItems>
        
            <field>Case_RR_Queue_Member_Assignment__c.Weight__c</field>
        
            <operation>greaterOrEqual</operation>
        
            <value>1</value>
        
        </summaryFilterItems>
    <summaryForeignKey>Case_RR_Queue_Member_Assignment__c.Case_Round_Robin_Queue__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>