force-app/main/default/objects/Case_Round_Robin_Queue__c/fields/Total_Unique_Queue_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Unique_Queue_Members__c</fullName>
    <label>Total Unique Queue Members</label>
    <summaryForeignKey>Case_RR_Queue_Member_Assignment__c.Case_Round_Robin_Queue__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>